--- a/index.html
+++ b/index.html
@@ -52,22 +52,28 @@
 					<div class="carousel-item active">
 					  <a href=#><img src="assets/img/renders/Arba_Rakonto.jpg" class="d-block w-100" alt="Arba Rakonto"></a>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>Arba Rakonto</h5>
-						<p>3D Role-play game with the open world and unique mechanincs.</p>
+						<div class=block-dark-down>
+							<h5>Arba Rakonto</h5>
+							<p>3D Role-play game with the open world and unique mechanincs.</p>
+						</div>
 					  </div>
 					</div>
 					<div class="carousel-item">
 					  <a href=#><img src="assets/img/renders/Chess_3D.jpg" class="d-block w-100" alt="Chess 3D"></a>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>3D Chess</h5>
-						<p>Free 3D realization of the chess game.</p>
+						<div class=block-dark-down>
+							<h5>3D Chess</h5>
+							<p>Free 3D realization of the chess game.</p>
+						</div>
 					  </div>
 					</div>
 					<div class="carousel-item">
 					  <a href=#><img src="assets/img/renders/The_Last_Way.jpg" class="d-block w-100" alt="The Last Way"></a>
 					  <div class="carousel-caption d-none d-md-block">
-						<h5>The Last Way</h5>
-						<p>A melancholic story where you are the author, able to choose the perfect ending.</p>
+						<div class=block-dark-down>
+							<h5>The Last Way</h5>
+							<p>A melancholic story where you are the author, able to choose the perfect ending.</p>
+						</div>
 					  </div>
 					</div>
 				  </div>
